# src/controller/application.controller.ts
@@ -4,7 +4,7 @@ import User from "../models/user.model";
 import mongoose from "mongoose";
 import clearApplicationCache from "../helpers/clearAppCache";
 import { getCache, setCache } from "../helpers/cacheHelper";
-
+// import Task from "../models/task.model";
 
 // Create an application
 export const createApplication = async (
@@ -12,11 +12,8 @@ export const createApplication = async (
   res: Response,
 ): Promise<void> => {
   try {
-    const { title, description, assets, status, priority } =
+    const { title, description, assets, status, priority, teamMembers } =
       req.body.body || req.body;
-
-    // const { title, description, assets, status, priority, teamMembers, tasks } =
-    //   req.body.body || req.body;
 
     // Ensure required fields are present
     if (!title || !description || !status || !priority) {
@@ -35,13 +32,13 @@ export const createApplication = async (
     }
 
     // Validate teamMembers (ensure IDs exist in User collection)
-    // if (teamMembers && teamMembers.length > 0) {
-    //   const validUsers = await User.find({ _id: { $in: teamMembers } });
-    //   if (validUsers.length !== teamMembers.length) {
-    //     res.status(400).json({ message: "Some team members are invalid." });
-    //     return;
-    //   }
-    // }
+    if (teamMembers && teamMembers.length > 0) {
+      const validUsers = await User.find({ _id: { $in: teamMembers } });
+      if (validUsers.length !== teamMembers.length) {
+        res.status(400).json({ message: "Some team members are invalid." });
+        return;
+      }
+    }
 
     // Create a new Application without tasks or team members initially
     const newApplication = new Application({
@@ -51,9 +48,7 @@ export const createApplication = async (
       status,
       priority,
       tasks: [], // No tasks initially
-      teamMembers: [], // No team members initially
-      // teamMembers: teamMembers || [],
-      // tasks: tasks || [], 
+      teamMembers: teamMembers || [],
     });
 
     // Save the new application to the database
@@ -254,7 +249,10 @@ export const deleteApplication = async (
 };
 
 // Get all untrashed applications (excluding trashed)
-export const getApplications = async (req: Request, res: Response): Promise<void> => {
+export const getApplications = async (
+  req: Request,
+  res: Response,
+): Promise<void> => {
   const cacheKey = "applications:all";
   try {
     // check cache first if yes or not
@@ -265,12 +263,12 @@ export const getApplications = async (req: Request, res: Response): Promise<void
     }
     // command to get from db server
     const applications = await Application.find({ isTrashed: false })
-      // .populate('tasks')
+      .populate('tasks')
       .populate("teamMembers")
       .exec();
 
     // store in cache, expire in 1h = 3600s
-    await setCache(cacheKey, applications, 3600); 
+    await setCache(cacheKey, applications, 3600);
 
     res.status(200).json({ applications });
   } catch (error) {
@@ -287,7 +285,10 @@ export const getApplications = async (req: Request, res: Response): Promise<void
 };
 
 // Get all untrashed applications (excluding trashed)
-export const getTodoApplications = async (req: Request, res: Response): Promise<void> => {
+export const getTodoApplications = async (
+  req: Request,
+  res: Response,
+): Promise<void> => {
   const cacheKey = "applications:todo";
   try {
     const cachedTodoApplications = await getCache(cacheKey);
@@ -321,7 +322,10 @@ export const getTodoApplications = async (req: Request, res: Response): Promise<
 };
 
 // Get all untrashed applications (excluding trashed)
-export const getImplementApplications = async (req: Request, res: Response): Promise<void> => {
+export const getImplementApplications = async (
+  req: Request,
+  res: Response,
+): Promise<void> => {
   const cacheKey = "applications:implement";
   try {
     const cachedImplementApplications = await getCache(cacheKey);
@@ -356,7 +360,10 @@ export const getImplementApplications = async (req: Request, res: Response): Pro
 };
 
 // Get all untrashed applications (excluding trashed)
-export const getTestingApplications = async (req: Request, res: Response): Promise<void> => {
+export const getTestingApplications = async (
+  req: Request,
+  res: Response,
+): Promise<void> => {
   const cacheKey = "applications:test";
   try {
     const cachedTestApplications = await getCache(cacheKey);
@@ -771,7 +778,6 @@ export const countApplicationsByStatus = async (
       message: "Applications count by status:",
       ...result,
     });
-
   } catch (error) {
     console.error("Error counting applications by status:", error);
     if (error instanceof Error) {
@@ -946,7 +952,7 @@ export const addMemberToApplication = async (
     if (!application.teamMembers.some((member) => member.equals(userId))) {
       application.teamMembers.push(new mongoose.Types.ObjectId(userId));
     }
-    
+
     try {
       await application.save();
       console.log("Application updated:", application);
@@ -955,7 +961,7 @@ export const addMemberToApplication = async (
       res.status(500).json({ message: "Failed to save application" });
       return;
     }
-    
+
     // DELETE cache to reset cache
     await clearApplicationCache();
 
