# src/validators/application.validator.ts
@@ -9,7 +9,7 @@ export const createApplicationSchema = Joi.object({
     .valid("To Do", "Implementing", "Testing", "Production")
     .required(),
   priority: Joi.string().valid("High", "Medium", "Low").required(),
-  // teamMembers: Joi.array().items(Joi.string().length(24)).optional(),
+  teamMembers: Joi.array().items(Joi.string().length(24)).optional(),
   // tasks: Joi.array().items(Joi.string()).optional(),
 });
 
@@ -63,3 +63,16 @@ export const titleSchema = Joi.object({
 export const apptitleSchema = Joi.object({
   application_title: Joi.string().required(),
 });
+
+export const paramsApplicationIdSchema = Joi.object({
+  applicationId: Joi.string().length(24).required(), 
+});
+
+export const taskBodySchema = Joi.object({
+  title: Joi.string().required(), 
+  deadline: Joi.date().iso().required(), 
+  tag: Joi.string().required(), 
+  status: Joi.string().valid("To Do", "In progress", "Done").optional(), 
+});
+
+
